@@ -13,13 +13,13 @@ automake
 # Change ./configure options if needed
 #./configure --with-mysql --prefix=/home/zabbix/zabbix --with-net-snmp
 
-rm -f config.guess config.sub depcomp install-sh missing
+#rm -f config.guess config.sub depcomp install-sh missing
 
-cp /usr/share/automake-1.9/config.guess	config.guess
-cp /usr/share/automake-1.9/config.sub	config.sub
-cp /usr/share/automake-1.9/depcomp	depcomp
-cp /usr/share/automake-1.9/install-sh	install-sh
-cp /usr/share/automake-1.9/missing	missing
+#cp /usr/share/automake-1.9/config.guess	config.guess
+#cp /usr/share/automake-1.9/config.sub	config.sub
+#cp /usr/share/automake-1.9/depcomp	depcomp
+#cp /usr/share/automake-1.9/install-sh	install-sh
+#cp /usr/share/automake-1.9/missing	missing
 
 #cd ~zabbix
 #rm -f zabbix.tgz
@@ -28,8 +28,9 @@ cp /usr/share/automake-1.9/missing	missing
 echo Configuring...
 export CFLAGS="-Wall"
 #export CFLAGS="-Wall -pedantic"
-./configure --enable-agent --enable-server --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 #./configure --enable-agent --enable-server --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+#./configure --enable-agent --enable-server --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+./configure --enable-agent --enable-server --with-oracle --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 echo Cleaning...
 make clean 2>>WARNINGS >/dev/null
 echo Making...
