@@ -1,5 +1,5 @@
 SUBDIRS=
-INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@ @PGSQL_INCLUDE@
+INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@ @PGSQL_INCLUDE@ @ORACLE_INCLUDE@
 libzbxdbhigh_a_SOURCES=action.c graph.c item.c trigger.c host.c db.c
 lib_LIBRARIES=libzbxdbhigh.a
 libzbxdbhigh_a_LIBADD = ../zbxcommon/libzbxcommon.a
