@@ -1,5 +1,5 @@
 SUBDIRS=
-INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@
+INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@ @ORACLE_INCLUDE@
 lib_LIBRARIES=libzbxalerter.a
 libzbxalerter_a_SOURCES=alerter.c
 libzbxalerter_a_LIBADD = ../../libs/zbxemail/libzbxemail.a
