@@ -1,4 +1,4 @@
 SUBDIRS=
-INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@
+INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@ @ORACLE_INCLUDE@
 lib_LIBRARIES=libzbxpinger.a
 libzbxpinger_a_SOURCES=pinger.c
