@@ -1,5 +1,5 @@
 SUBDIRS=
-INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@
+INCLUDES=-I@top_srcdir@/include @MYSQL_INCLUDE@ @ORACLE_INCLUDE@
 lib_LIBRARIES=libzbxtrapper.a
 libzbxtrapper_a_SOURCES=active.c autoregister.h autoregister.c trapper.c
 libzbxtrapper_a_LIBADD = ../../libs/zbxdbhigh/libzbxdbhigh.a
